TAG:  qcreports_db-3-1-1-5
TAG:  qcreports_db-3-1-1-4
DATE: 02/01/2005
STAFF: lec
RELEASE: A
CHANGES:
a) MGI 3.11 merge

TAG:  qcreports_db-3-1-1-3
DATE: 01/31/2005
STAFF: lec
RELEASE: A
CHANGES:
a) MGI 3.11 merge

TAG:  qcreports_db-3-1-1-2
TAG:  qcreports_db-3-1-1-1
DATE: 01/26/2005
STAFF: lec
RELEASE: A
CHANGES:
a) MGI 3.11 merge

TAG:  qcreports_db-3-1-0-17
TAG:  qcreports_db-3-1-0-16
TAG:  qcreports_db-3-1-0-15
TAG:  qcreports_db-3-1-0-14
TAG:  qcreports_db-3-1-0-13
DATE: 01/20/2005
STAFF: lec
RELEASE: A
CHANGES:
a) TR 5939/EntrezGene load
b) msp reports

TAG:  qcreports_db-3-1-0-12
TAG:  qcreports_db-3-1-0-11
DATE: 01/13/2005
STAFF: lec
RELEASE: A
CHANGES:
a) TR 5939/EntrezGene load

TAG:  qcreports_db-3-1-0-10
DATE: 12/29/2004
STAFF: dbm
RELEASE: A
CHANGES:
a) Disable logging in QC reports for data loads

TAG:  qcreports_db-3-1-0-9
TAG:  qcreports_db-3-1-0-8
TAG:  qcreports_db-3-1-0-7
DATE: 12/23/2004
STAFF: lec
RELEASE: A
CHANGES:
a) MGI 3.1
b) new reportlib.py

TAG:  qcreports_db-3-1-0-6
TAG:  qcreports_db-3-1-0-5
TAG:  qcreports_db-3-1-0-4
TAG:  qcreports_db-3-1-0-3
DATE: 12/22/2004
STAFF: lec
RELEASE: A
CHANGES:
a) MGI 3.1
b) TR 6436; conversion to EntrezGene
c) move "output" directory to /data/reports
d) TR 6439; BIB_NoAbstract.sql

TAG:  qcreports_db-tr3007-BP
DATE: 12/22/2004
STAFF: dbm
RELEASE: A
CHANGES:
a) branch point tag for TR 3007 (MGC Load)

TAG:  qcreports_db-3-1-0-2
DATE: 12/21/2004
STAFF: lec
RELEASE: A
CHANGES:
a) MGI 3.1
b) HMD_RIKEN.sql; performance improvements

TAG:  qcreports_db-maint6300-12
DATE: 01/21/2005
STAFF: lec
RELEASE: A
CHANGES:
a) MGI 3.11 (TR 6300)
b) GXD_SpecNoAge.sql

TAG:  qcreports_db-maint6300-11
TAG:  qcreports_db-maint6300-10
TAG:  qcreports_db-maint6300-9
DATE: 01/20/2005
STAFF: lec
RELEASE: A
CHANGES:
a) MGI 3.11 (TR 6300)
b) GXD_SpecNoAge.sql

TAG:  qcreports_db-maint6300-8
TAG:  qcreports_db-maint6300-7
DATE: 01/12/2005
STAFF: lec
RELEASE: A
CHANGES:
a) MGI 3.11 (TR 6300)
b) TR 6469
c) TR 6465
