@@ -135,7 +135,7 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_AntibodyMarker.sql.rpt">GXD Assay Antibody/Marker Pairs No Longer Found in Master Antibody Table</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_ProbeReference.sql.rpt">GXD Assay Probes with no corresponding entry in the Probe Reference Table</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_NotInCache.sql.rpt">GXD Assays missing from GXD Expression Cache Table</A>
-<LI><A HREF="/data/reports/qcreports_db/output/GXD_Stats.sql.rpt">GXD Statistics</A>
+<LI><A HREF="/data/reports/qcreports_db/output/GXD_Stats.rpt">GXD Statistics</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_SpecEmbryonic.sql.rpt">Adult Specimens with Embryonic Structures</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_SpecNoAge.sql.rpt">Specimens with incorrect age/age range values</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_SpecMissingAllele.sql.rpt">Specimens with Missing Allele 2 Genotypes</A>
@@ -185,10 +185,10 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="/data/reports/qcreports_db/output/NOMEN_Broadcast.sql.rpt">Nomenclature Symbols Broadcast Within Last 3 Days</A>
 <LI><A HREF="/data/reports/qcreports_db/output/NOMEN_Pending.sql.rpt">Nomenclature In Progress Symbols</A>
 <LI><A HREF="/data/reports/qcreports_db/output/NOMEN_Reserved.rpt">Nomenclature Reserved</A>
-<LI><A HREF="/data/reports/qcreports_db/output/HMD_SymbolDiffs1.sql.rpt">MGD Mouse Symbols which differ from Orthologous Human Symbols #1; excludes RIKEN</A>
-<LI><A HREF="/data/reports/qcreports_db/output/HMD_SymbolDiffs2.sql.rpt">MGD Mouse Symbols which differ from Orthologous Human Symbols #2; excludes RIKEN</A>
-<LI><A HREF="/data/reports/qcreports_db/output/HMD_SymbolDiffs3.sql.rpt">MGD Mouse Symbols which differ from Orthologous Human Symbols #3; RIKEN only</A>
-<LI><A HREF="/data/reports/qcreports_db/output/HMD_SymbolDiffs4.sql.rpt">MGD Mouse Symbols which differ from Orthologous Human Symbols #4; RIKEN only</A>
+<LI><A HREF="/data/reports/qcreports_db/output/HMD_SymbolDiffs1.sql.rpt">MGI Symbols differing from Human Ortholog Symbols, excludes RIKEN (#1)</A>
+<LI><A HREF="/data/reports/qcreports_db/output/HMD_SymbolDiffs2.sql.rpt">MGI Symbols differing from Human Ortholog Symbols, excludes RIKEN (#2)</A>
+<LI><A HREF="/data/reports/qcreports_db/output/HMD_SymbolDiffs3.sql.rpt">MGI Symbols differing from Human Ortholog Symbols, RIKEN only (#1)</A>
+<LI><A HREF="/data/reports/qcreports_db/output/HMD_SymbolDiffs4.sql.rpt">MGI Symbols differing from Human Ortholog Symbols, RIKEN only (#2)</A>
 <LI><A HREF="/data/reports/qcreports_db/output/MRK_Withdrawn.sql.rpt">Withdrawn Markers</A>
 <LI><A HREF="/data/reports/qcreports_db/output/MRK_InterimByRef.sql.rpt">Interim Markers (sorted by Reference)</A>
 <LI><A HREF="/data/reports/qcreports_db/output/MRK_InterimByDate.sql.rpt">Interim Markers (sorted by Date)</A>
