@@ -1,3 +1,11 @@
+TAG:  qcreports_db-3-1-1-6
+DATE: 02/03/2005
+STAFF: lec
+RELEASE: A
+CHANGES:
+a) TR 6440 (GXD_Stats.py)
+b) TR 6547 (nomenclature reports)
+
 TAG:  qcreports_db-3-1-1-5
 TAG:  qcreports_db-3-1-1-4
 DATE: 02/01/2005
